--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background: black;
+  background: #312E2B;
   margin: 0;
   width: 100vw;
   height: 100vh;
@@ -38,11 +38,11 @@ body {
   width: 150px;
   height: 150px;
   border-radius: 50%;
-  box-shadow: 0 0 0 5px black;
+  box-shadow: 0 0 0 5px #312E2B;
 }
 
 .empty {
-  background-color: black;
+  background-color: #312E2B;
 }
 
 .player-1 {
