Added title to start.html

--- a/app/templates/game/lobby.html
+++ b/app/templates/game/lobby.html
@@ -6,7 +6,7 @@
 
 {% block main %}
     <div class="container">
-        <div class="title">
+        <div class="title-container">
             <h1>Ambolt.io Connect Four Challenge</h1>
         </div>
         <div class="bottom-container">
@@ -27,9 +27,9 @@
                 <div class="player-port">
                     <div class="form-container">
                         <form>
-                            <label for="portnumber1">Player 1's Port</label><br>
+                            <label for="portnumber1">Player 2's Port</label><br>
                             <div class="port-and-button-container">
-                                <input type="text" id="portnumber1" name="portnumber1">
+                                <input type="text" id="portnumber2" name="portnumber2">
                                 <button class="connect-button">
                                     Test Connection
                                 </button>
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="play-button-container">
-                    <a href="{{ url_for('game.play') }}">
+                    <a href="{{ url_for('game.start') }}">
                         <div class="play-button">
                             Play
                         </div>
