--- a/app/static/css/base.css
+++ b/app/static/css/base.css
@@ -7,6 +7,20 @@ body {
   margin: 0;
   width: 100vw;
   height: 100vh;
+  color: white;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+.title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: xx-large;
+  height: 20vh;
 }
 
 /*# sourceMappingURL=base.css.map */
