--- a/app/static/css/base.scss
+++ b/app/static/css/base.scss
@@ -1,10 +1,24 @@
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    background: #312E2B;
-    margin: 0;
-    width: 100vw;
-    height: 100vh;
+  background: #312E2B;
+  margin: 0;
+  width: 100vw;
+  height: 100vh;
+  color: white;
+}
+
+.container {
+  width: 100%;
+  height: 100%;
+}
+
+.title-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: xx-large;
+  height: 20vh;
 }
