--- a/app/static/css/game.css
+++ b/app/static/css/game.css
@@ -1,9 +1,7 @@
-.container {
-  width: 100%;
-  height: 100%;
+.board-container {
   display: flex;
-  align-items: center;
   justify-content: center;
+  align-items: center;
 }
 
 .board {
@@ -46,4 +44,4 @@
   background-color: red;
 }
 
-/*# sourceMappingURL=play.css.map */
+/*# sourceMappingURL=game.css.map */
