--- a/app/templates/game/lobby.html
+++ b/app/templates/game/lobby.html
@@ -38,7 +38,7 @@
                     </div>
                 </div>
                 <div class="play-button-container">
-                    <a href="{{ url_for('game.start') }}">
+                    <a href="{{ url_for('start') }}">
                         <div class="play-button">
                             Play
                         </div>
