--- a/app/templates/game/game.html
+++ b/app/templates/game/game.html
@@ -36,5 +36,12 @@
             {% endfor %}
         </div>
     </div>
+    <div class="bottom-container">
+        <a href="{{ url_for('lobby') }}">
+            <div class="back-button">
+                Back
+            </div>
+        </a>
+    </div>
 </div>
 {% endblock %}
