--- a/app/templates/game/lobby.html
+++ b/app/templates/game/lobby.html
@@ -13,26 +13,30 @@
             <div class="player-connections">
                 <div class="player-port">
                     <div class="form-container">
-                        <form>
+                        <form action="{{ url_for('check') }}" method="post">
                             <label for="portnumber1">Player 1's Port</label><br>
                             <div class="port-and-button-container">
-                                <input type="text" id="portnumber1" name="portnumber1">
-                                <button class="connect-button">
-                                    Test Connection
-                                </button>
+                                <input type="text" id="portnumber1" name="portnumber1"/>
+                                {% if port1_valid == True %}
+                                <input class="connect-button" type="submit" value="Test Connection" style="border: 1px solid green"/>
+                                {% else %}
+                                <input class="connect-button" type="submit" value="Test Connection"/>
+                                {% endif %}
                             </div>
                         </form>
                     </div>
                 </div>
                 <div class="player-port">
                     <div class="form-container">
-                        <form>
-                            <label for="portnumber1">Player 2's Port</label><br>
+                        <form action="{{ url_for('check') }}" method="post">
+                            <label for="portnumber2">Player 2's Port</label><br>
                             <div class="port-and-button-container">
-                                <input type="text" id="portnumber2" name="portnumber2">
-                                <button class="connect-button">
-                                    Test Connection
-                                </button>
+                                <input type="text" id="portnumber2" name="portnumber2"/>
+                                {% if port2_valid == True %}
+                                <input class="connect-button" type="submit" value="Test Connection" style="border: 1px solid green"/>
+                                {% else %}
+                                <input class="connect-button" type="submit" value="Test Connection"/>
+                                {% endif %}
                             </div>
                         </form>
                     </div>
