Checking port successfully (probably missing some checks)

--- a/app/templates/game/lobby.html
+++ b/app/templates/game/lobby.html
@@ -18,7 +18,7 @@
                             <div class="port-and-button-container">
                                 <input type="text" id="portnumber1" name="portnumber1"/>
                                 {% if port1_valid == True %}
-                                <input class="connect-button" type="submit" value="Test Connection" style="border: 1px solid green"/>
+                                <input class="connect-button" type="submit" value="Connection Successful" style="background: green"/>
                                 {% else %}
                                 <input class="connect-button" type="submit" value="Test Connection"/>
                                 {% endif %}
@@ -33,7 +33,7 @@
                             <div class="port-and-button-container">
                                 <input type="text" id="portnumber2" name="portnumber2"/>
                                 {% if port2_valid == True %}
-                                <input class="connect-button" type="submit" value="Test Connection" style="border: 1px solid green"/>
+                                <input class="connect-button" type="submit" value="Connection Successful" style="background: green"/>
                                 {% else %}
                                 <input class="connect-button" type="submit" value="Test Connection"/>
                                 {% endif %}
