--- a/app/templates/game/lobby.html
+++ b/app/templates/game/lobby.html
@@ -11,15 +11,17 @@
         </div>
         <div class="bottom-container">
             <div class="player-connections">
+                <p style="color:red;">{{ message }}</p>
                 <div class="player-port">
                     <div class="form-container">
                         <form action="{{ url_for('check') }}" method="post">
                             <label for="portnumber1">Player 1's Port</label><br>
                             <div class="port-and-button-container">
-                                <input type="text" id="portnumber1" name="portnumber1"/>
                                 {% if port1_valid == True %}
-                                <input class="connect-button" type="submit" value="Connection Successful" style="background: green"/>
+                                <input type="text" id="portnumber1" name="portnumber1" value="{{ game.player_1.port }}" disabled="disabled"/>
+                                <input class="connect-button" type="submit" value="Player 1 connected" style="background: green"/>
                                 {% else %}
+                                <input type="text" id="portnumber1" name="portnumber1"/>
                                 <input class="connect-button" type="submit" value="Test Connection"/>
                                 {% endif %}
                             </div>
@@ -31,10 +33,11 @@
                         <form action="{{ url_for('check') }}" method="post">
                             <label for="portnumber2">Player 2's Port</label><br>
                             <div class="port-and-button-container">
-                                <input type="text" id="portnumber2" name="portnumber2"/>
                                 {% if port2_valid == True %}
-                                <input class="connect-button" type="submit" value="Connection Successful" style="background: green"/>
+                                <input type="text" id="portnumber2" name="portnumber2" value="{{ game.player_2.port }}" disabled="disabled"/>
+                                <input class="connect-button" type="submit" value="Player 2 connected" style="background: green"/>
                                 {% else %}
+                                <input type="text" id="portnumber2" name="portnumber2"/>
                                 <input class="connect-button" type="submit" value="Test Connection"/>
                                 {% endif %}
                             </div>
