--- a/app/templates/game/game.html
+++ b/app/templates/game/game.html
@@ -22,6 +22,11 @@
             <p>Name: {{ game.player_1.name }}</p>
             <p>Total time: {{ game.player_1.get_total_time() }} seconds</p>
             <p>Last move: {{ game.player_1.get_last_turn_time() }} seconds</p>
+            {% if game.player_1.is_human == True %}
+            <p>Human</p>
+            {% else %}
+            <p>Agent</p>
+            {% endif %}
         </div>
 
         <div class="board">
@@ -55,6 +60,11 @@
             <p>Name: {{ game.player_2.name }}</p>
             <p>Total time: {{ game.player_2.get_total_time() }} seconds</p>
             <p>Last move: {{ game.player_2.get_last_turn_time() }} seconds</p>
+            {% if game.player_2.is_human == True %}
+            <p>Human</p>
+            {% else %}
+            <p>Agent</p>
+            {% endif %}
         </div>
 
     </div>
