Made a reset method on the game object

--- a/app/static/css/lobby.css
+++ b/app/static/css/lobby.css
@@ -1,3 +1,9 @@
+.message-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 .bottom-container {
   display: flex;
   justify-content: center;
